[UPDATE] Index.html 업데이트

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" contnent="병원 아이들을 위한 놀이터입니다." />
-    <title>chick</title>
+    <title>병아리, 병원 아이들을 위한 비대면 놀이터</title>
   </head>
   <body>
     <div id="root"></div>
