--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,4 +10,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script type="text/javascript" src="lib/deepar.js"></script>
 </html>
